@@ -1,5 +1,5 @@
 #ifndef __build_h
 #define __build_h
-#define NETXMS_VERSION_BUILD 7864
-#define NETXMS_VERSION_BUILD_STRING _T("7864")
+#define NETXMS_VERSION_BUILD 7865
+#define NETXMS_VERSION_BUILD_STRING _T("7865")
 #endif
