@@ -1,5 +1,5 @@
 package org.netxms.base;
 public final class BuildNumber {
-   public static final String TEXT = "7864";
-   public static final int NUMBER = 7864;
+   public static final String TEXT = "7865";
+   public static final int NUMBER = 7865;
 }
