@@ -1059,8 +1059,8 @@ public:
    UINT32 getZoneId() { return m_zoneId; }
    UINT32 getFlags() { return m_dwFlags; }
    UINT32 getRuntimeFlags() { return m_dwDynamicFlags; }
-   void setFlag(UINT32 flag) { m_dwFlags |= flag; }
-   void clearFlag(UINT32 flag) { m_dwFlags &= ~flag; }
+   void setFlag(UINT32 flag) { LockData(); m_dwFlags |= flag; Modify(); UnlockData(); }
+   void clearFlag(UINT32 flag) { LockData(); m_dwFlags &= ~flag; Modify(); UnlockData(); }
    void setLocalMgmtFlag() { m_dwFlags |= NF_IS_LOCAL_MGMT; }
    void clearLocalMgmtFlag() { m_dwFlags &= ~NF_IS_LOCAL_MGMT; }
 
